--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=8.0.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -34,7 +35,7 @@
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer" : true
+            "yiisoft/yii2-composer": true
         },
         "process-timeout": 1800,
         "fxp-asset": {
