--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,18 @@ services:
       - ./:/app:delegated
     ports:
       - '8000:80'
+  redis:
+    image: redis:latest
+    ports:
+      - '6379:6379'
+  mysql:
+    image: 'mysql:latest'
+    volumes:
+      - ./docker/dbdata:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_DATABASE: yii2basic
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_ROOT_PASSWORD: 'root'
